<resources>
    <string name="app_name">Unit Meassure Meter</string>
    <string name="result">Sample Test</string>
    <string name="text_size_hint">Text Size</string>
    <string name="sp">sp</string>
    <string name="text_siz_Text">Text Size:</string>
    <string name="unit_measures_meter_title">Unit Measures - Meter</string>
    <string name="unit_measures_test_title">Unit Measures - Test</string>
    <string name="button_text">Button Size:</string>
    <string name="button_size">Button Size:</string>
    <string name="total_width_text">Total Width:</string>
    <string name="total_height_text">Total Height</string>
    <string name="btn_convert">Convert</string>
    <string name="unit_measures_converter">Unit Measures - Converter</string>
    <string name="device_width">Device Width:</string>
    <string name="device_height">Device Height:</string>
    <string name="tv_conversion">Conversion</string>
    <string name="tv_other_screen">Other Screen PX Size:</string>
    <string name="tv_x">X</string>
    <string name="tv_pixel_item_width">Pixel Item Width:</string>
    <string name="tv_equal">=</string>
    <string name="tv_pixel_item_height">Pixel Item Height</string>
    <string name="tv_unit_measures_meter">Unit Measures - Meter</string>
    <string name="tv_unit_measure_test">Unit Measure - Test</string>
    <string name="tv_text_view_style">Text View Style:</string>
    <string name="btn_config_style">Config</string>
    <string name="tv_button_style">Button Style</string>
    <string name="tv_px">px</string>
    <string name="tv_dp">dp</string>
    <string name="tv_text_style">Style Name</string>
    <string name="tv_title">TITLE</string>
    <string name="tv_text">Text:</string>
    <string name="tv_text_hint">MyStyle</string>
    <string name="et_text_hint">write here your test text</string>
    <string name="tv_padding">Padding:</string>
    <string name="tv_margin">Margin:</string>
    <string name="hint_start">Start</string>
    <string name="hint_top">Top</string>
    <string name="hint_bottom">Bottom</string>
    <string name="hint_end">End</string>
    <string name="tv_text_size">Text Size:</string>
    <string name="et_text_Size">12</string>
    <string name="tv_sp">sp</string>
    <string name="tv_text_color">Text Color:</string>
    <string name="et_text_color">#FFFFFF</string>
    <string name="chk_transparent">Transparent</string>
    <string name="tv_font_family">Font Family:</string>
    <string name="tv_font_style">Font Style:</string>
    <string name="text_view_config_label">TextView Configuration</string>
    <string name="button_config_label">Button Configuration</string>
    <string name="generate_xml_style_button">Generate XML Style</string>
    <string name="my_style_edit_text">My Style</string>
    <string name="go_back_button">Go Back</string>
    <string name="tv_background_color">Background Color</string>
    <string name="get_code_btn">Get Code</string>
    <string-array name="size_type_array">
        <item>sp</item>
        <item>dp</item>
    </string-array>

    <string-array name="fonts_array">
        <item>Gotham Bold</item>
        <item>Gotham Bold Italic</item>
        <item>Gotham Book</item>
        <item>Gotham Book Italic</item>
        <item>Gotham Light</item>
        <item>Gotham Light Italic</item>
        <item>Gotham Medium</item>
        <item>Gotham Medium 1</item>
        <item>Gotham Medium Italic</item>
    </string-array>

    <string-array name="font_style_array">
        <item>Normal</item>
        <item>Bold</item>
        <item>Italic</item>
    </string-array>

</resources>
