<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Blackground"
    android:padding="20dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvTitle"
        style="@style/TitleStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/unit_measures_meter_title"
        app:layout_constraintEnd_toStartOf="@id/view_divider"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvTotalW"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="35dp"
        android:paddingEnd="10dp"
        android:text="@string/total_width_text"
        android:textColor="@color/AllWhite"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTitle" />

    <TextView
        android:id="@+id/tvTotalW_ValuePX"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:paddingTop="35dp"
        android:textColor="@color/AllWhite"
        app:layout_constraintStart_toEndOf="@id/tvTotalW"
        app:layout_constraintTop_toBottomOf="@id/tvTitle" />

    <TextView
        android:id="@+id/tvpxw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:text="@string/tv_px"
        android:textColor="@color/AllWhite"
        app:layout_constraintBottom_toBottomOf="@id/tvTotalW_ValuePX"
        app:layout_constraintStart_toEndOf="@id/tvTotalW_ValuePX" />

    <TextView
        android:id="@+id/tvTotalW_ValueDP"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:paddingTop="35dp"
        android:textColor="@color/AllWhite"
        app:layout_constraintStart_toEndOf="@id/tvTotalW_ValuePX"
        app:layout_constraintTop_toBottomOf="@id/tvTitle" />

    <TextView
        android:id="@+id/tvdpw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:text="@string/tv_dp"
        android:textColor="@color/AllWhite"
        app:layout_constraintBottom_toBottomOf="@id/tvTotalW_ValueDP"
        app:layout_constraintStart_toEndOf="@id/tvTotalW_ValueDP" />
    <TextView
        android:id="@+id/tvTotalH"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingEnd="10dp"
        android:paddingBottom="35dp"
        android:text="@string/total_height_text"
        android:textColor="@color/AllWhite"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTotalW" />

    <TextView
        android:id="@+id/tvTotalH_ValuePX"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:layout_marginBottom="35dp"
        android:textColor="@color/AllWhite"
        app:layout_constraintStart_toEndOf="@id/tvTotalH"
        app:layout_constraintTop_toBottomOf="@id/tvTotalW_ValuePX" />

    <TextView
        android:id="@+id/tvpxh"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:text="@string/tv_px"
        android:textColor="@color/AllWhite"
        app:layout_constraintBottom_toBottomOf="@id/tvTotalH_ValuePX"
        app:layout_constraintStart_toEndOf="@id/tvTotalH_ValuePX" />

    <TextView
        android:id="@+id/tvTotalH_ValueDP"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:layout_marginBottom="35dp"
        android:textColor="@color/AllWhite"
        app:layout_constraintStart_toEndOf="@id/tvTotalW_ValuePX"
        app:layout_constraintTop_toBottomOf="@id/tvTotalW_ValueDP" />

    <TextView
        android:id="@+id/tvdph"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:text="@string/tv_dp"
        android:textColor="@color/AllWhite"
        app:layout_constraintBottom_toBottomOf="@id/tvTotalH_ValueDP"
        app:layout_constraintStart_toEndOf="@id/tvTotalH_ValueDP" />

    <Button
        android:id="@+id/btn_Convert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="convertButtonClick"
        android:text="@string/btn_convert"
        app:layout_constraintBottom_toBottomOf="@id/tvTotalH_ValueDP"
        app:layout_constraintEnd_toStartOf="@id/view_divider"
        app:layout_constraintStart_toEndOf="@id/tvTotalW_ValueDP"
        app:layout_constraintTop_toBottomOf="@id/tvTitle" />

    <TextView
        android:id="@+id/tvTextSize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingEnd="10dp"
        android:text="@string/text_siz_Text"
        android:textColor="@color/AllWhite"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTotalH" />

    <EditText
        android:id="@+id/etSize"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:background="#FFFFFF"
        android:hint="@string/text_size_hint"
        android:inputType="number"
        android:maxLength="2"
        app:layout_constraintStart_toEndOf="@id/tvTextSize"
        app:layout_constraintBottom_toBottomOf="@id/tvTextSize" />

    <!--    <TextView-->
    <!--        android:id="@+id/tvSizeType"-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:paddingStart="15dp"-->
    <!--        android:paddingEnd="0dp"-->
    <!--        android:text="@string/sp"-->
    <!--        android:textColor="@color/AllWhite"-->
    <!--        app:layout_constraintStart_toEndOf="@id/etSize"-->
    <!--        app:layout_constraintTop_toBottomOf="@id/tvTitle" />-->

    <Spinner
        android:id="@+id/spSizeType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@id/etSize"
        app:layout_constraintStart_toEndOf="@id/etSize"
        app:layout_constraintTop_toBottomOf="@id/tvTotalH" />

    <SeekBar
        android:id="@+id/skSize"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:max="100"
        android:paddingTop="15dp"
        android:progressBackgroundTint="@color/AllWhite"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTextSize" />

    <TextView
        android:id="@+id/tvButtonSize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingEnd="10dp"
        android:text="@string/button_size"
        android:textColor="@color/AllWhite"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/skSize" />

    <EditText
        android:id="@+id/etButtonSize"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:background="#FFFFFF"
        android:hint="@string/button_size"
        android:inputType="number"
        android:maxLength="2"
        app:layout_constraintStart_toEndOf="@id/tvButtonSize"
        app:layout_constraintTop_toBottomOf="@id/skSize" />

    <TextView
        android:id="@+id/tvButtonSizeType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="15dp"
        android:paddingEnd="0dp"
        android:text="@string/sp"
        android:textColor="@color/AllWhite"
        app:layout_constraintStart_toEndOf="@id/etButtonSize"
        app:layout_constraintTop_toBottomOf="@id/skSize" />

    <SeekBar
        android:id="@+id/skButtonSize"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:max="100"
        android:paddingTop="15dp"
        android:progressBackgroundTint="@color/AllWhite"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvButtonSize" />

    <TextView
        android:id="@+id/tvTextViewStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:text="@string/tv_text_view_style"
        android:textColor="@color/AllWhite"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/skButtonSize" />

    <Button
        android:id="@+id/btnConfigTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:onClick="configTextButtonClick"
        android:text="@string/btn_config_style"
        app:layout_constraintStart_toEndOf="@id/tvTextViewStyle"
        app:layout_constraintTop_toBottomOf="@id/skButtonSize"
        app:layout_constraintBottom_toBottomOf="@id/tvTextViewStyle"/>

    <TextView
        android:id="@+id/tvButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:text="@string/tv_button_style"
        android:textColor="@color/AllWhite"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTextViewStyle" />

    <Button
        android:id="@+id/btnConfigButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="configButtonClick"
        android:text="@string/btn_config_style"
        app:layout_constraintStart_toStartOf="@id/btnConfigTextView"
        app:layout_constraintTop_toBottomOf="@id/btnConfigTextView"
        app:layout_constraintBottom_toBottomOf="@id/tvButtonStyle"/>

    <View
        android:id="@+id/view_divider"
        style="@style/Divider"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/tvTitle2"
        app:layout_constraintStart_toEndOf="@id/tvTitle"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvTitle2"
        style="@style/TitleStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/unit_measures_test_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/view_divider"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvResult"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:paddingStart="15dp"
        android:paddingEnd="0dp"
        android:text="@string/result"
        android:textColor="@color/AllWhite"
        app:layout_constraintBottom_toTopOf="@id/btn_Text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@id/view_divider"
        app:layout_constraintTop_toBottomOf="@id/tvTitle2" />

    <Button
        android:id="@+id/btn_Text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/view_divider"
        app:layout_constraintTop_toBottomOf="@id/tvResult" />


</androidx.constraintlayout.widget.ConstraintLayout>