<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FormatActivity"
    android:background="@color/Blackground"
    android:paddingLeft="15dp">

    <TextView
        android:id="@+id/tvTitleConverter"
        style="@style/TitleStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="45dp"
        android:paddingBottom="45dp"
        android:text="@string/tv_unit_measures_meter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvDeviceWidth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingEnd="5dp"
        android:text="@string/device_width"
        android:textColor="@color/AllWhite"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTitleConverter" />

    <TextView
        android:id="@+id/tvWidthPX"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/AllWhite"
        app:layout_constraintEnd_toStartOf="@id/tvWidthDP"
        app:layout_constraintStart_toEndOf="@id/tvDeviceWidth"
        app:layout_constraintTop_toBottomOf="@id/tvTitleConverter" />

    <TextView
        android:id="@+id/tvWidthDP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/AllWhite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tvWidthPX"
        app:layout_constraintTop_toBottomOf="@id/tvTitleConverter" />

    <TextView
        android:id="@+id/tvDeviceHeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/device_height"
        android:textColor="@color/AllWhite"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvDeviceWidth" />

    <TextView
        android:id="@+id/tvHeightPX"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/AllWhite"
        app:layout_constraintEnd_toStartOf="@id/tvWidthDP"
        app:layout_constraintStart_toEndOf="@id/tvDeviceWidth"
        app:layout_constraintTop_toBottomOf="@id/tvWidthPX" />

    <TextView
        android:id="@+id/tvHeightDP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/AllWhite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tvWidthPX"
        app:layout_constraintTop_toBottomOf="@id/tvWidthDP" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Text Style"
        android:layout_marginTop="45dp"
        app:layout_constraintTop_toBottomOf="@id/tvDeviceHeight"
        app:layout_constraintStart_toStartOf="parent"
        android:textColor="@color/AllWhite"/>





</androidx.constraintlayout.widget.ConstraintLayout>